# Nmap Changelog ($Id$); -*-text-*-

o [GH#926] The rarity level of MS SQL's service detection probe was decreased.
  Now we can find MS SQL in odd ports without increasing version intensity.
  [Paulino Calderon]

o [NSE][GH#892] New script http-bigip-cookie decodes unencrypted F5 BIG-IP
  cookies and reports back the IP address and port of the actual server behind
  the load-balancer. [Seth Jackson]

o [NSE] New script http-jsonp-detection Attempts to discover JSONP endpoints in 
  web servers. JSONP endpoints can be used to bypass Same-origin Policy 
  restrictions in web browsers. [Vinamra Bhatia]

o Nmap can now resolve and scan all IP addresses of a host. Instead of using
  the resolveall NSE script, append "*all" to a target hostname:
    nmap example.com*all another.example.com*all/24
  [Daniel Miller]

o [GH#957] Fix reporting of zlib and libssh2 versions in "nmap --version". We
  were always reporting the version number of the included source, even when a
  different version was linked. [Pavel Zhukov]

o Add a new helper function for nmap-service-probes match lines: $I(1,">") will
  unpack an unsigned big-endian integer value up to 8 bytes wide from capture
  1. The second option can be "<" for little-endian. [Daniel Miller]

Nmap 7.60 [2017-07-31]

o [Windows] Updated the bundled Npcap from 0.91 to 0.93, fixing several issues
  with installation and compatibility with the Windows 10 Creators Update.

o [NSE][GH#910] NSE scripts now have complete SSH support via libssh2,
  including password brute-forcing and running remote commands, thanks to the
  combined efforts of three Summer of Code students: [Devin Bjelland, Sergey
  Khegay, Evangelos Deirmentzoglou]

o [NSE] Added 14 NSE scripts from 6 authors, bringing the total up to 579!
  They are all listed at https://nmap.org/nsedoc/, and the summaries are below:

  + ftp-syst sends SYST and STAT commands to FTP servers to get system version
    and connection information. [Daniel Miller]
